--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -1,7 +1,8 @@
 /* VERSION MOBILE --------  */
 
 @media (max-width: 576px) {
-  .header-info-portfolio {
+  .header-info-portfolio,
+  .proyecto-pig-game {
     display: none;
   }
 
@@ -43,15 +44,31 @@
       }
     }
   }
-  .sobreMi-container {
+  .estudios{
+    ul{
+      padding: 10px 0;
+      list-style: none;
+      p{
+        padding: 10px 60px;
+      }
+      i{
+        padding-right: 15px;
+      }
+      li{
+        text-align: left;
+      }
+    }
+  }
+  .sobreMi-container,.estudios {
     text-align: center;
 
     img {
-      padding: 20px 0;
+      padding: 30px 0;
       width: 60%;
     }
     p {
-      padding: 20px 0;
+      padding: 20px 50px;
+      text-align: justify;
     }
     h2 {
       font-size: 20px;
@@ -89,18 +106,28 @@
       }
     }
     .proyectos-container {
-        padding: 20px 0px;
+      padding: 0px 0px;
 
-        .proyectos{
-            img{
-                width: 60%;
-            }
-        }
-      }
-
-
+      /* .proyectos{
+            
+        } */
+    }
+    p {
+      padding: 20px 50px;
+      text-align: justify;
+    }
+    h3 {
+      padding: 20px 50px;
+    }
+    a {
+      text-decoration: none;
+      color: black;
+    }
+    img {
+      width: 60%;
+    }
   }
-  
+
   .contacto-container {
     text-align: center;
 
@@ -119,12 +146,15 @@
         left: 50%;
       }
     }
-    .redes{
-        padding: 20px 0;
+    .redes {
+      padding: 40px 0;
 
-        i{
-            font-size: 20px;
-        }
+      i {
+        font-size: 20px;
+      }
+      p {
+        padding: 10px 20px;
+      }
     }
   }
 }
