--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -9,7 +9,16 @@
   header {
     display: grid;
     grid-template-columns: 80% 20%;
-    padding: 10px 0;
+    padding: 20px;
+    position: sticky;
+    top: 0;
+    background-color: black;
+    color: white;
+    z-index: 100;
+    width: 100%;
+    p {
+      padding-left: 10px;
+    }
 
     .header-nombre-portfolio {
       grid-column: 1;
@@ -19,141 +28,180 @@
       text-align: center;
     }
   }
-  main {
-    .main-principal {
+  .header-info-mobile {
+    z-index: 100;
+    background-color: black;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    position: fixed;
+    top: 39px;
+    color: white;
+
+    ul {
+      list-style: none;
+      text-align: center;
+      line-height: 50px;
+      height: 100vh;
+      font-size: 20px;
+      margin: 0; /* Elimina el margen por defecto del ul */
+      padding: 0; /* Elimina el padding por defecto del ul */
       display: flex;
       flex-direction: column;
-      text-align: center;
-      padding: 20px 10px 0;
+      justify-content: center; /* Centra verticalmente los elementos */
+      align-items: center; /* Centra horizontalmente los elementos */
+      a {
+        color: white;
+        text-decoration: none;
+      }
+    }
+  }
+  .oculto {
+    display: none;
+  }
+  .todo-el-contenido {
+    background-color: wheat;
+    main {
+      position: relative;
+      z-index: 1;
 
-      .main-foto {
-        padding: 20px 0;
-        img {
-          width: 60%;
+      .main-principal {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding: 20px 10px 0;
+
+        .main-foto {
+          padding: 20px 0;
+          img {
+            width: 60%;
+          }
+        }
+      }
+      .main-secundaria {
+        text-align: center;
+        padding-bottom: 20px;
+
+        .redes {
+          i {
+            font-size: 20px;
+          }
         }
       }
     }
-    .main-secundaria {
+    .estudios {
+      ul {
+        padding: 10px 0;
+        list-style: none;
+        p {
+          padding: 10px 60px;
+        }
+        i {
+          padding-right: 15px;
+        }
+        li {
+          text-align: left;
+        }
+      }
+    }
+    .sobreMi-container,
+    .estudios {
       text-align: center;
-      padding-bottom: 20px;
 
+      img {
+        padding: 30px 0;
+        width: 60%;
+      }
+      p {
+        padding: 20px 50px;
+        text-align: justify;
+      }
+      h2 {
+        font-size: 20px;
+        //padding-bottom: 20px;
+        position: relative;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
+          transform: translateX(-50%);
+          width: 70px;
+          height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
+          background-color: #000; /* Cambia esto para cambiar el color del subrayado */
+          left: 50%;
+        }
+      }
+    }
+    .portfolio-container {
+      text-align: center;
+
+      h2 {
+        font-size: 20px;
+        position: relative;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
+          transform: translateX(-50%);
+          width: 70px;
+          height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
+          background-color: #000; /* Cambia esto para cambiar el color del subrayado */
+          left: 50%; /*  */
+        }
+      }
+      .proyectos-container {
+        padding: 0px 0px;
+
+        /* .proyectos{
+              
+          } */
+      }
+      p {
+        padding: 20px 50px;
+        text-align: justify;
+      }
+      h3 {
+        padding: 20px 50px;
+      }
+      a {
+        text-decoration: none;
+        color: black;
+      }
+      img {
+        width: 60%;
+      }
+    }
+
+    .contacto-container {
+      text-align: center;
+
+      h2 {
+        font-size: 20px;
+        position: relative;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
+          transform: translateX(-50%);
+          width: 70px;
+          height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
+          background-color: #000; /* Cambia esto para cambiar el color del subrayado */
+          left: 50%;
+        }
+      }
       .redes {
+        padding: 40px 0;
+
         i {
           font-size: 20px;
         }
-      }
-    }
-  }
-  .estudios{
-    ul{
-      padding: 10px 0;
-      list-style: none;
-      p{
-        padding: 10px 60px;
-      }
-      i{
-        padding-right: 15px;
-      }
-      li{
-        text-align: left;
-      }
-    }
-  }
-  .sobreMi-container,.estudios {
-    text-align: center;
-
-    img {
-      padding: 30px 0;
-      width: 60%;
-    }
-    p {
-      padding: 20px 50px;
-      text-align: justify;
-    }
-    h2 {
-      font-size: 20px;
-      //padding-bottom: 20px;
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
-        transform: translateX(-50%);
-        width: 70px;
-        height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
-        background-color: #000; /* Cambia esto para cambiar el color del subrayado */
-        left: 50%;
-      }
-    }
-  }
-  .portfolio-container {
-    text-align: center;
-
-    h2 {
-      font-size: 20px;
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
-        transform: translateX(-50%);
-        width: 70px;
-        height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
-        background-color: #000; /* Cambia esto para cambiar el color del subrayado */
-        left: 50%; /*  */
-      }
-    }
-    .proyectos-container {
-      padding: 0px 0px;
-
-      /* .proyectos{
-            
-        } */
-    }
-    p {
-      padding: 20px 50px;
-      text-align: justify;
-    }
-    h3 {
-      padding: 20px 50px;
-    }
-    a {
-      text-decoration: none;
-      color: black;
-    }
-    img {
-      width: 60%;
-    }
-  }
-
-  .contacto-container {
-    text-align: center;
-
-    h2 {
-      font-size: 20px;
-      position: relative;
-
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
-        transform: translateX(-50%);
-        width: 70px;
-        height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
-        background-color: #000; /* Cambia esto para cambiar el color del subrayado */
-        left: 50%;
-      }
-    }
-    .redes {
-      padding: 40px 0;
-
-      i {
-        font-size: 20px;
-      }
-      p {
-        padding: 10px 20px;
+        p {
+          padding: 10px 20px;
+        }
       }
     }
   }
