--- a/scss/utilidades/_reset.scss
+++ b/scss/utilidades/_reset.scss
@@ -1,5 +1,5 @@
 *{
-    padding: 0px 5px;
+    padding: 0;
     box-sizing: border-box;
     margin: 0;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
