modificacion del aspecto visual y re ordenamiento de la informacion

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,9 @@
-@import './secciones/index';
-
-
 @import './utilidades/reset';
+
+@import './secciones/index';
+@import './secciones/webMrSnack';
+
+
+
 
 @import './utilidades/mixin-y-extend';
