--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+* {
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
+
 /* VERSION MOBILE --------  */
 @media (max-width: 576px) {
   .header-info-portfolio,
@@ -16,6 +22,18 @@
     width: 100%; }
     header p {
       padding-left: 10px; }
+    header::after {
+      content: "";
+      position: absolute;
+      bottom: 0px;
+      /* Ajusta esto para controlar la posición vertical del subrayado */
+      transform: translateX(-50%);
+      width: 100%;
+      height: 2px;
+      /* Ajusta esto para controlar el grosor del subrayado */
+      background-color: #2e2f36;
+      /* Cambia esto para cambiar el color del subrayado */
+      left: 50%; }
     header .header-nombre-portfolio {
       grid-column: 1; }
     header .header-menuHamburguesa-container {
@@ -52,7 +70,8 @@
   .oculto {
     display: none; }
   .todo-el-contenido {
-    background-color: wheat; }
+    background-color: #1a1a1a;
+    color: white; }
     .todo-el-contenido main {
       position: relative;
       z-index: 1; }
@@ -69,7 +88,27 @@
         text-align: center;
         padding-bottom: 20px; }
         .todo-el-contenido main .main-secundaria .redes i {
-          font-size: 20px; }
+          font-size: 20px;
+          color: white; }
+    .todo-el-contenido .estudios, .todo-el-contenido .sobreMi-container, .todo-el-contenido .portfolio-container, .todo-el-contenido .contacto-container {
+      text-align: center; }
+      .todo-el-contenido .estudios h2, .todo-el-contenido .sobreMi-container h2, .todo-el-contenido .portfolio-container h2, .todo-el-contenido .contacto-container h2 {
+        font-size: 20px;
+        position: relative; }
+        .todo-el-contenido .estudios h2::after, .todo-el-contenido .sobreMi-container h2::after, .todo-el-contenido .portfolio-container h2::after, .todo-el-contenido .contacto-container h2::after {
+          content: "";
+          position: absolute;
+          bottom: -5px;
+          /* Ajusta esto para controlar la posición vertical del subrayado */
+          transform: translateX(-50%);
+          width: 70px;
+          height: 2px;
+          /* Ajusta esto para controlar el grosor del subrayado */
+          background-color: red;
+          /* Cambia esto para cambiar el color del subrayado */
+          left: 50%; }
+      .todo-el-contenido .estudios i, .todo-el-contenido .sobreMi-container i, .todo-el-contenido .portfolio-container i, .todo-el-contenido .contacto-container i {
+        color: white; }
     .todo-el-contenido .estudios ul {
       padding: 10px 0;
       list-style: none; }
@@ -87,84 +126,31 @@
       .todo-el-contenido .estudios ul li {
         text-align: left;
         padding: 10px 60px; }
-    .todo-el-contenido .sobreMi-container,
-    .todo-el-contenido .estudios {
-      text-align: center; }
-      .todo-el-contenido .sobreMi-container img,
-      .todo-el-contenido .estudios img {
-        padding: 30px 0;
-        width: 60%; }
-      .todo-el-contenido .sobreMi-container p,
-      .todo-el-contenido .estudios p {
-        padding: 20px 50px;
-        text-align: left; }
-      .todo-el-contenido .sobreMi-container h2,
-      .todo-el-contenido .estudios h2 {
-        font-size: 20px;
-        position: relative; }
-        .todo-el-contenido .sobreMi-container h2::after,
-        .todo-el-contenido .estudios h2::after {
-          content: "";
-          position: absolute;
-          bottom: -5px;
-          /* Ajusta esto para controlar la posición vertical del subrayado */
-          transform: translateX(-50%);
-          width: 70px;
-          height: 2px;
-          /* Ajusta esto para controlar el grosor del subrayado */
-          background-color: #000;
-          /* Cambia esto para cambiar el color del subrayado */
-          left: 50%; }
-    .todo-el-contenido .portfolio-container {
-      text-align: center; }
-      .todo-el-contenido .portfolio-container h2 {
-        font-size: 20px;
-        position: relative; }
-        .todo-el-contenido .portfolio-container h2::after {
-          content: "";
-          position: absolute;
-          bottom: -5px;
-          /* Ajusta esto para controlar la posición vertical del subrayado */
-          transform: translateX(-50%);
-          width: 70px;
-          height: 2px;
-          /* Ajusta esto para controlar el grosor del subrayado */
-          background-color: #000;
-          /* Cambia esto para cambiar el color del subrayado */
-          left: 50%;
-          /*  */ }
-      .todo-el-contenido .portfolio-container .proyectos-container {
-        padding: 0px 0px;
-        /* .proyectos{
-              
-          } */ }
-      .todo-el-contenido .portfolio-container p {
-        padding: 20px 50px;
-        text-align: left; }
-      .todo-el-contenido .portfolio-container h3 {
-        padding: 20px 50px; }
-      .todo-el-contenido .portfolio-container a {
-        text-decoration: none;
-        color: black; }
-      .todo-el-contenido .portfolio-container img {
-        width: 60%; }
+    .todo-el-contenido .sobreMi-container img,
+    .todo-el-contenido .estudios img {
+      padding: 30px 0;
+      width: 60%; }
+    .todo-el-contenido .sobreMi-container p,
+    .todo-el-contenido .estudios p {
+      padding: 20px 50px;
+      text-align: left; }
+    .todo-el-contenido .portfolio-container .proyectos-container {
+      padding: 0px 0px; }
+    .todo-el-contenido .portfolio-container p {
+      padding: 20px 50px;
+      text-align: left;
+      color: white; }
+    .todo-el-contenido .portfolio-container h3 {
+      padding: 20px 50px;
+      color: white; }
+    .todo-el-contenido .portfolio-container a {
+      text-decoration: none;
+      color: black; }
+    .todo-el-contenido .portfolio-container img {
+      width: 60%;
+      margin: 10px 0; }
     .todo-el-contenido .contacto-container {
-      text-align: center; }
-      .todo-el-contenido .contacto-container h2 {
-        font-size: 20px;
-        position: relative; }
-        .todo-el-contenido .contacto-container h2::after {
-          content: "";
-          position: absolute;
-          bottom: -5px;
-          /* Ajusta esto para controlar la posición vertical del subrayado */
-          transform: translateX(-50%);
-          width: 70px;
-          height: 2px;
-          /* Ajusta esto para controlar el grosor del subrayado */
-          background-color: #000;
-          /* Cambia esto para cambiar el color del subrayado */
-          left: 50%; }
+      margin-top: 20px; }
       .todo-el-contenido .contacto-container .redes {
         padding: 40px 0; }
         .todo-el-contenido .contacto-container .redes i {
@@ -172,11 +158,25 @@
         .todo-el-contenido .contacto-container .redes p {
           padding: 10px 20px; } }
 
-* {
-  padding: 0;
-  box-sizing: border-box;
-  margin: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
+@media (max-width: 576px) {
+  .portfolio-container {
+    background-color: #1a1a1a;
+    color: white; }
+    .portfolio-container .proyectos-container {
+      padding: 0px 0px; }
+    .portfolio-container p {
+      padding: 20px 50px;
+      text-align: left;
+      color: white; }
+    .portfolio-container h3 {
+      padding: 20px 50px;
+      color: white; }
+    .portfolio-container a {
+      text-decoration: none;
+      color: white; }
+    .portfolio-container img {
+      width: 100%;
+      margin: 10px 0; } }
 
 .propiedades-subrayado-titulos {
   content: "";
