--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -19,6 +19,16 @@
     p {
       padding-left: 10px;
     }
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0px; /* Ajusta esto para controlar la posición vertical del subrayado */
+      transform: translateX(-50%);
+      width: 100%;
+      height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
+      background-color: rgb(46, 47, 54); /* Cambia esto para cambiar el color del subrayado */
+      left: 50%;
+    }
 
     .header-nombre-portfolio {
       grid-column: 1;
@@ -61,7 +71,8 @@
     display: none;
   }
   .todo-el-contenido {
-    background-color: wheat;
+    background-color: rgba(26, 26, 26, 1);
+    color: white;
     main {
       position: relative;
       z-index: 1;
@@ -86,8 +97,29 @@
         .redes {
           i {
             font-size: 20px;
+            color: white;
           }
         }
+      }
+    }
+    .estudios, .sobreMi-container, .portfolio-container,.contacto-container{
+      text-align: center;
+      h2{
+        font-size: 20px;
+        position: relative;
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
+          transform: translateX(-50%);
+          width: 70px;
+          height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
+          background-color: red; /* Cambia esto para cambiar el color del subrayado */
+          left: 50%;
+        }
+      }
+      i{
+        color: white;
       }
     }
     .estudios {
@@ -117,7 +149,7 @@
     }
     .sobreMi-container,
     .estudios {
-      text-align: center;
+      
 
       img {
         padding: 30px 0;
@@ -127,54 +159,22 @@
         padding: 20px 50px;
         text-align: left;
       }
-      h2 {
-        font-size: 20px;
-        //padding-bottom: 20px;
-        position: relative;
-
-        &::after {
-          content: "";
-          position: absolute;
-          bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
-          transform: translateX(-50%);
-          width: 70px;
-          height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
-          background-color: #000; /* Cambia esto para cambiar el color del subrayado */
-          left: 50%;
-        }
-      }
+      
     }
     .portfolio-container {
-      text-align: center;
-
-      h2 {
-        font-size: 20px;
-        position: relative;
-
-        &::after {
-          content: "";
-          position: absolute;
-          bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
-          transform: translateX(-50%);
-          width: 70px;
-          height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
-          background-color: #000; /* Cambia esto para cambiar el color del subrayado */
-          left: 50%; /*  */
-        }
-      }
+      
       .proyectos-container {
         padding: 0px 0px;
 
-        /* .proyectos{
-              
-          } */
       }
       p {
         padding: 20px 50px;
         text-align: left;
+        color: white;
       }
       h3 {
         padding: 20px 50px;
+        color: white;
       }
       a {
         text-decoration: none;
@@ -182,27 +182,12 @@
       }
       img {
         width: 60%;
+        margin: 10px 0;
       }
     }
 
     .contacto-container {
-      text-align: center;
-
-      h2 {
-        font-size: 20px;
-        position: relative;
-
-        &::after {
-          content: "";
-          position: absolute;
-          bottom: -5px; /* Ajusta esto para controlar la posición vertical del subrayado */
-          transform: translateX(-50%);
-          width: 70px;
-          height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
-          background-color: #000; /* Cambia esto para cambiar el color del subrayado */
-          left: 50%;
-        }
-      }
+      margin-top: 20px;
       .redes {
         padding: 40px 0;
 
