--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import './utilidades/reset';
 
 @import './secciones/index';
-@import './secciones/webMrSnack';
+@import './secciones/pagesPortfolio';
 
 
 
