--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,10 @@
         header .header-nombre-portfolio a p {
           display: flex; }
     header .header-menuHamburguesa-container {
+      display: block;
       grid-column: 2;
-      text-align: center; }
+      text-align: right;
+      width: 50%; }
   .header-info-mobile {
     z-index: 100;
     background-color: black;
@@ -96,14 +98,26 @@
         .todo-el-contenido main .main-secundaria .redes i {
           font-size: 20px;
           color: white; }
-    .todo-el-contenido .estudios, .todo-el-contenido .sobreMi-container, .todo-el-contenido .portfolio-container, .todo-el-contenido .contacto-container, .todo-el-contenido .idiomas {
+    .todo-el-contenido .estudios,
+    .todo-el-contenido .sobreMi-container,
+    .todo-el-contenido .portfolio-container,
+    .todo-el-contenido .contacto-container,
+    .todo-el-contenido .idiomas {
       text-align: center;
       padding: 50px 0; }
-      .todo-el-contenido .estudios h2, .todo-el-contenido .sobreMi-container h2, .todo-el-contenido .portfolio-container h2, .todo-el-contenido .contacto-container h2, .todo-el-contenido .idiomas h2 {
+      .todo-el-contenido .estudios h2,
+      .todo-el-contenido .sobreMi-container h2,
+      .todo-el-contenido .portfolio-container h2,
+      .todo-el-contenido .contacto-container h2,
+      .todo-el-contenido .idiomas h2 {
         font-size: 20px;
         position: relative;
         padding-top: 10px; }
-        .todo-el-contenido .estudios h2::after, .todo-el-contenido .sobreMi-container h2::after, .todo-el-contenido .portfolio-container h2::after, .todo-el-contenido .contacto-container h2::after, .todo-el-contenido .idiomas h2::after {
+        .todo-el-contenido .estudios h2::after,
+        .todo-el-contenido .sobreMi-container h2::after,
+        .todo-el-contenido .portfolio-container h2::after,
+        .todo-el-contenido .contacto-container h2::after,
+        .todo-el-contenido .idiomas h2::after {
           content: "";
           position: absolute;
           bottom: -5px;
@@ -115,35 +129,47 @@
           background-color: red;
           /* Cambia esto para cambiar el color del subrayado */
           left: 50%; }
-      .todo-el-contenido .estudios i, .todo-el-contenido .sobreMi-container i, .todo-el-contenido .portfolio-container i, .todo-el-contenido .contacto-container i, .todo-el-contenido .idiomas i {
+      .todo-el-contenido .estudios i,
+      .todo-el-contenido .sobreMi-container i,
+      .todo-el-contenido .portfolio-container i,
+      .todo-el-contenido .contacto-container i,
+      .todo-el-contenido .idiomas i {
         color: white; }
-    .todo-el-contenido .estudios, .todo-el-contenido .idiomas {
+    .todo-el-contenido .estudios,
+    .todo-el-contenido .idiomas {
       /* background: linear-gradient(45deg, red, black); */
       background: linear-gradient(45deg, red, #800000, #400000, black); }
-      .todo-el-contenido .estudios ul, .todo-el-contenido .idiomas ul {
+      .todo-el-contenido .estudios ul,
+      .todo-el-contenido .idiomas ul {
         padding: 0px 0;
         list-style: none; }
-        .todo-el-contenido .estudios ul .titulo-instituto, .todo-el-contenido .idiomas ul .titulo-instituto {
+        .todo-el-contenido .estudios ul .titulo-instituto,
+        .todo-el-contenido .idiomas ul .titulo-instituto {
           position: relative;
           top: -15px;
           padding-left: 90px;
           color: blue;
           font-weight: bold; }
-        .todo-el-contenido .estudios ul p, .todo-el-contenido .idiomas ul p {
+        .todo-el-contenido .estudios ul p,
+        .todo-el-contenido .idiomas ul p {
           padding: 10px 90px 0px;
           position: relative;
           top: -15px; }
-        .todo-el-contenido .estudios ul i, .todo-el-contenido .idiomas ul i {
+        .todo-el-contenido .estudios ul i,
+        .todo-el-contenido .idiomas ul i {
           padding-right: 15px; }
-        .todo-el-contenido .estudios ul li, .todo-el-contenido .idiomas ul li {
+        .todo-el-contenido .estudios ul li,
+        .todo-el-contenido .idiomas ul li {
           text-align: left;
           padding: 10px 60px; }
     .todo-el-contenido .sobreMi-container img,
-    .todo-el-contenido .estudios img, .todo-el-contenido .idiomas img {
+    .todo-el-contenido .estudios img,
+    .todo-el-contenido .idiomas img {
       padding: 30px 0;
       width: 60%; }
     .todo-el-contenido .sobreMi-container p,
-    .todo-el-contenido .estudios p, .todo-el-contenido .idiomas p {
+    .todo-el-contenido .estudios p,
+    .todo-el-contenido .idiomas p {
       padding: 20px 50px;
       text-align: left; }
     .todo-el-contenido .portfolio-container .proyectos-container {
@@ -169,6 +195,27 @@
           font-size: 20px; }
         .todo-el-contenido .contacto-container .redes p {
           padding: 10px 20px; } }
+
+/* VERSION DESKTOP --------  */
+.header-menuHamburguesa-container {
+  display: none; }
+
+header {
+  background-color: black;
+  display: grid;
+  /* grid-template-columns: 30% 70%; */
+  padding: 20px;
+  color: white; }
+  header .header-info-portfolio ul {
+    color: white;
+    display: flex;
+    justify-content: space-around; }
+    header .header-info-portfolio ul li {
+      list-style: none; }
+  header .header-nombre-portfolio {
+    padding-right: 20px; }
+    header .header-nombre-portfolio a {
+      color: white; }
 
 @media (max-width: 576px) {
   .header-iconoRegresar-container {
