--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -26,27 +26,31 @@
       transform: translateX(-50%);
       width: 100%;
       height: 2px; /* Ajusta esto para controlar el grosor del subrayado */
-      background-color: rgb(46, 47, 54); /* Cambia esto para cambiar el color del subrayado */
+      background-color: rgb(
+        46,
+        47,
+        54
+      ); /* Cambia esto para cambiar el color del subrayado */
       left: 50%;
     }
 
     .header-nombre-portfolio {
       grid-column: 1;
       width: fit-content;
-      a{
+      a {
         color: white;
         text-decoration: none;
-        
-        
-        p{
-          
+
+        p {
           display: flex;
         }
       }
     }
     .header-menuHamburguesa-container {
+      display: block;
       grid-column: 2;
-      text-align: center;
+      text-align: right;
+      width: 50%;
     }
   }
   .header-info-mobile {
@@ -113,14 +117,18 @@
         }
       }
     }
-    .estudios, .sobreMi-container, .portfolio-container,.contacto-container, .idiomas{
+    .estudios,
+    .sobreMi-container,
+    .portfolio-container,
+    .contacto-container,
+    .idiomas {
       text-align: center;
       padding: 50px 0;
-      h2{
+      h2 {
         font-size: 20px;
         position: relative;
         padding-top: 10px;
-        
+
         &::after {
           content: "";
           position: absolute;
@@ -132,17 +140,18 @@
           left: 50%;
         }
       }
-      i{
+      i {
         color: white;
       }
     }
-    .estudios, .idiomas {
+    .estudios,
+    .idiomas {
       /* background: linear-gradient(45deg, red, black); */
       background: linear-gradient(45deg, red, #800000, #400000, black);
       ul {
         padding: 0px 0;
         list-style: none;
-        .titulo-instituto{
+        .titulo-instituto {
           position: relative;
           top: -15px;
           padding-left: 90px;
@@ -160,14 +169,12 @@
         li {
           text-align: left;
           padding: 10px 60px;
-          
         }
       }
     }
     .sobreMi-container,
-    .estudios, .idiomas {
-      
-
+    .estudios,
+    .idiomas {
       img {
         padding: 30px 0;
         width: 60%;
@@ -176,13 +183,10 @@
         padding: 20px 50px;
         text-align: left;
       }
-      
     }
     .portfolio-container {
-      
       .proyectos-container {
         padding: 0px 0px;
-
       }
       p {
         padding: 20px 50px;
@@ -215,6 +219,40 @@
           padding: 10px 20px;
         }
       }
+    }
+  }
+}
+
+/* VERSION DESKTOP --------  */
+
+.header-menuHamburguesa-container {
+  display: none;
+}
+
+header {
+  background-color: black;
+  display: grid;
+
+  /* grid-template-columns: 30% 70%; */
+  padding: 20px;
+
+  color: white;
+
+  .header-info-portfolio {
+    ul {
+      color: white;
+      display: flex;
+      justify-content: space-around;
+
+      li {
+        list-style: none;
+      }
+    }
+  }
+  .header-nombre-portfolio {
+    padding-right: 20px;
+    a {
+      color: white;
     }
   }
 }
