--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -1,3 +1,69 @@
+/* VERSION DESKTOP --------  */
+
+.header-menuHamburguesa-container,
+.header-info-mobile {
+  display: none;
+}
+
+header {
+  background-color: black;
+  display: grid;
+
+  grid-template-columns: 30% 70%;
+  padding: 20px;
+
+  color: white;
+
+  .header-info-portfolio {
+    ul {
+      color: white;
+      display: flex;
+      justify-content: space-around;
+
+      li {
+        list-style: none;
+      }
+    }
+  }
+  .header-nombre-portfolio {
+    padding-right: 20px;
+    margin-left: 10px;
+    a {
+      color: white;
+      text-decoration: none;
+    }
+  }
+}
+.todo-el-contenido {
+  background-color: rgba(26, 26, 26, 1);
+  color: white;
+  text-align: center;
+
+  main {
+    .main-principal {
+      padding: 20px 10px 0;
+      .main-foto {
+        padding: 20px 0;
+        float: left;
+        width: 50%;
+
+        img {
+          width: 20%;
+        }
+      }
+    }
+    .main-secundaria{
+      float: left;
+      
+    }
+  }
+
+  .sobreMi-container {
+    float: right;
+    width: 50%;
+  }
+}
+
 /* VERSION MOBILE --------  */
 
 @media (max-width: 576px) {
@@ -100,6 +166,8 @@
 
         .main-foto {
           padding: 20px 0;
+          float: none;
+          width: 100%;
           img {
             width: 60%;
           }
@@ -124,6 +192,8 @@
     .idiomas {
       text-align: center;
       padding: 50px 0;
+      float: none;
+      width: 100%;
       h2 {
         font-size: 20px;
         position: relative;
@@ -219,40 +289,6 @@
           padding: 10px 20px;
         }
       }
-    }
-  }
-}
-
-/* VERSION DESKTOP --------  */
-
-.header-menuHamburguesa-container {
-  display: none;
-}
-
-header {
-  background-color: black;
-  display: grid;
-
-  /* grid-template-columns: 30% 70%; */
-  padding: 20px;
-
-  color: white;
-
-  .header-info-portfolio {
-    ul {
-      color: white;
-      display: flex;
-      justify-content: space-around;
-
-      li {
-        list-style: none;
-      }
-    }
-  }
-  .header-nombre-portfolio {
-    padding-right: 20px;
-    a {
-      color: white;
     }
   }
 }
